# smpl-structure-gen

./: pyproject.toml  test.py
configs/: causal.yaml  causal_comparison.yaml  default.yaml  engineering.yaml  experiment_label_sparsity.yaml  pretrain.yaml  semi-sup_experiment_res.md  semi_supervised.yaml  supervised.yaml  supervised_matrix_results.md
scripts/: contagion_experiment.py  create_dummy_baci.py  download_baci.py  evaluate_models.py  experiment_causal_comparison.py  experiment_label_sparsity.py  run_experiments.py  shock_experiment.py  train.py  train_causal.py  train_pretrain.py  train_semi_supervised.py  train_supervised.py
src/mol_prop_gnn/data/: preprocessing.py  unified_dataset.py
src/mol_prop_gnn/models/: lightgbm_baseline.py  rgcn.py  spatial_mpnn.py  transformer.py  xgboost_baseline.py
src/mol_prop_gnn/training/: causal_semi_sup_module.py  supervised_module.py
src/mol_prop_gnn/utils/: config.py
src/mol_prop_gnn/visualization/: __init__.py  causal_mask.py
src/trade_flow_gcn/data/: dataset.py  download.py  preprocessing.py
src/trade_flow_gcn/evaluation/: metrics.py
src/trade_flow_gcn/models/: egnn.py  gat.py  gcn.py  gine.py  mlp_baseline.py  rgcn.py  xgboost_baseline.py
src/trade_flow_gcn/training/: lightning_module.py
tmp/: verify_3d.py
